[workspace]
members = [
    "local_cloud_actix",
    "local_cloud_common",
    "local_cloud_testing",
    "local_cloud_validate",
    "local_cloud_xml",
    "local_cloud_db",
    "local_cloud_iam_policy_document",
    "local_cloud_iam_rs",
    "local_cloud_sts_rs",
]
resolver = "2"

[workspace.dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-http = "3"
actix-server = "2.3"
actix-service = "2"
actix-test = "0.1"
actix-utils = "3"
actix-web = { version = "4.4", features = ["__compress"] }
actix-ws = "0.2"
actix-rt = "2.9"

derive_more = "0.99"
derive_builder = "0.13"
lazy_static = "1.4"
encoding_rs = "0.8"
dotenv = "0.15"
env_logger = "0.11"
futures = "*"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"

base64 = "0.21"
data-encoding = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_aws_query_ce = "0.1"
validator = { version = "0.16", features = ["derive"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "chrono",
    "uuid",
] }
tokio = { version = "1.24", features = ["sync", "full"] }
url = "2.5"
urlencoding = "2.1"
qrcode = "0.13"
image = "0.24"

chrono = { version = "0.4", features = ["serde"] }

aws-config = "1.1"
aws-smithy-xml = "0.60"
aws-smithy-types = "1.1"
aws-smithy-runtime-api = "1.1"
aws-types = "1.1"
aws-sdk-iam = "1.10"
aws-sdk-sts = "1.10"
aws-credential-types = "1.1"

uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
parking_lot = "0.12"
regex = "1.10"
password-hash = "0.5"
argon2 = "0.5"
openssh-keys = "0.6"
x509-parser = "0.15"

etcd-client = "0.12"

# Testing
rstest = "0.18.2"

[profile.release]
strip = "debuginfo"
