[workspace]
members = [
    "local_cloud_axum",
    "local_cloud_common",
    "local_cloud_testing",
    "local_cloud_validate",
    "local_cloud_xml",
    "local_cloud_db",
    "local_cloud_iam_policy_document",
    "local_cloud_iam_rs",
    "local_cloud_sts_rs",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
hyper = { version = "1.5", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.41", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
tracing = "0.1"

derive_more = { version ="1.0", features = ["full"] }
derive_builder = "0.20"
lazy_static = "1.4"
encoding_rs = "0.8"
dotenv = "0.15"
env_logger = "0.11"
futures = "*"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"

base64 = "0.22"
data-encoding = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_aws_query_ce = "0.1"
validator = { version = "0.16", features = ["derive"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "chrono",
    "uuid",
] }

url = "2.5"
urlencoding = "2.1"
qrcode = "0.13"
image = "0.24"

chrono = { version = "0.4", features = ["serde"] }

aws-config = "1.5"
aws-sigv4 = "1.2"
aws-smithy-xml = "0.60"
aws-smithy-types = "1.1"
aws-smithy-runtime-api = "1.1"
aws-types = "1.3"
aws-sdk-iam = "1.50"
aws-sdk-sts = "1.48"
aws-credential-types = "1.2"

uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
parking_lot = "0.12"
regex = "1.10"
password-hash = "0.5"
argon2 = "0.5"
openssh-keys = "0.6"
x509-parser = "0.16"

etcd-client = "0.12"

# Testing
rstest = "0.23"

[profile.release]
strip = "debuginfo"
