[workspace]
members = [
    # common modules
    "runtime/common/local-aws-query-protocol",
    "runtime/common/db",
    "runtime/common/qrcode",
    "runtime/common/utils",
    "runtime/common/validators",
    "runtime/common/xml",
    "runtime/common/web",
    # IAM modules
    "runtime/iam/iam_policy",
    "aws/iam_rs",
    # STS modules
    "aws/sts_rs",
    # modules for testing
    "runtime/common/testing",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
hyper = { version = "1.5", features = [] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.41", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
tracing = "0.1"

derive_more = { version = "1.0", features = ["full"] }
derive_builder = "0.20"
thiserror = "2"

lazy_static = "1.4"
encoding_rs = "0.8"
dotenv = "0.15"
env_logger = "0.11"
futures = "*"
log = "0.4"

base64 = "0.22"
data-encoding = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
validator = { version = "0.16", features = ["derive"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "chrono",
    "uuid",
] }

url = "2.5"
urlencoding = "2.1"
qrcode = "0.13"
image = "0.24"

chrono = { version = "0.4", features = ["serde"] }
form_urlencoded = "1.2"

# AWS dependencies
aws-config = "1.5"
aws-sigv4 = "1.2"
aws-smithy-xml = "0.60"
aws-smithy-types = "1.2"
aws-smithy-runtime-api = "1.7"
aws-types = "1.3"
aws-sdk-iam = "1.52"
aws-sdk-sts = "1.50"
aws-credential-types = "1.2"

uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
parking_lot = "0.12"
regex = "1.10"
password-hash = "0.5"
argon2 = "0.5"
openssh-keys = "0.6"
x509-parser = "0.16"

etcd-client = "0.12"


# Testing
rstest = "0.23"

[profile.release]
strip = "debuginfo"
