[package]
name = "local_cloud_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-http.workspace = true
derive_more.workspace = true
serde.workspace = true
log.workspace = true

futures-core.workspace = true
futures-util.workspace = true
uuid.workspace = true

encoding_rs.workspace = true
serde_aws_query_ce.workspace = true
