[package]
name = "local_cloud_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

derive_more.workspace = true
serde.workspace = true
log.workspace = true

futures-core.workspace = true
futures-util.workspace = true
uuid.workspace = true

encoding_rs.workspace = true
serde_aws_query_ce.workspace = true
tracing-subscriber = "0.3.18"

[dev-dependencies]
http = "1.0"
http-body-util = "0.1"
