[package]
name = "local_cloud_iam_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http.workspace = true
actix-server.workspace = true
actix-service.workspace = true
actix-web.workspace = true
actix-utils.workspace = true

chrono.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true

qrcode.workspace = true
image.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true

sqlx.workspace = true
url.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true

uuid.workspace = true
rand.workspace = true
parking_lot.workspace = true
regex.workspace = true
password-hash.workspace = true
argon2.workspace = true

aws-config.workspace = true
aws-smithy-xml.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
aws-sdk-iam.workspace = true
aws-credential-types.workspace = true

local_cloud_actix = { path = "../local_cloud_actix" }
local_cloud_common = { path = "../local_cloud_common" }
local_cloud_validate = { path = "../local_cloud_validate" }
local_cloud_xml = { path = "../local_cloud_xml" }
local_cloud_db = { path = "../local_cloud_db" }
local_cloud_iam_policy_document = { path = "../local_cloud_iam_policy_document" }

lazy_static.workspace = true
encoding_rs.workspace = true
data-encoding.workspace = true
urlencoding.workspace = true

[dev-dependencies]
actix-rt.workspace = true
aws-smithy-runtime-api.workspace = true
serde_aws_query_ce.workspace = true
serde_urlencoded = "0.7"
rstest.workspace = true
local_cloud_testing = { path = "../local_cloud_testing" }
