[package]
name = "iam_rs"
version = "0.1.0"
edition = "2021"
authors = ["Maksim Dadzerkin <maksim.dadzerkin@gmail.com>"]

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true

chrono.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true

qrcode.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true

sqlx.workspace = true
url.workspace = true

uuid.workspace = true
rand.workspace = true
parking_lot.workspace = true
regex.workspace = true
password-hash.workspace = true
argon2.workspace = true
openssh-keys.workspace = true
x509-parser.workspace = true

aws-config.workspace = true
aws-smithy-xml.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
aws-sdk-iam.workspace = true
aws-credential-types.workspace = true

web = { path = "../../dependencies/common/web" }
utils = { path = "../../dependencies/common/utils" }
validators = { path = "../../dependencies/common/validators" }
xml = { path = "../../dependencies/common/xml" }
db = { path = "../../dependencies/common/db" }
iam_policy = { path = "../../dependencies/iam/iam_policy" }

lazy_static.workspace = true
encoding_rs.workspace = true
data-encoding.workspace = true
urlencoding.workspace = true

[dev-dependencies]
aws-smithy-runtime-api.workspace = true
serde_aws_query_ce.workspace = true
serde_urlencoded = "0.7"
rstest.workspace = true
testing = { path = "../../dependencies/common/testing" }
