[package]
name = "local-aws-query-protocol"
version = "0.1.1"
description = "Query deserializer for AWS Query protocol"
edition = "2021"
authors = ["Maksim Dadzerkin <maksim.dadzerkin@gmail.com>"]
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "smithy", "aws", "querystring"]
readme = "README.md"
exclude = [".github", "target", "Cargo.lock"]
license = "Apache-2.0"
repository = "https://github.com/local-cloud-rs/serde_aws_query_ce"

[dependencies]
serde.workspace = true
form_urlencoded.workspace = true
aws-smithy-types.workspace = true
log.workspace = true

[dev-dependencies]
serde_derive = "1.0"
serde_urlencoded = "0.7"
serde_with = "3.4"
